objects/hoopla__Hoopla_Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings to activate/deactivate Hoopla Scoreboard triggers.</description>
    <fields>
        <fullName>hoopla__Has_Action_Definitions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether action definitions exist for this object.</description>
        <label>Has_Action_Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hoopla__Has_Metric_Definitions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether metric definitions exist for this object.</description>
        <label>Has Metric Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hoopla__Has_Stat_Definitions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether or not this object/trigger has active Stat Definitions created for it</description>
        <inlineHelpText>Identifies whether or not this object/trigger has active Stat Definitions created for it</inlineHelpText>
        <label>Has Stat Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hoopla__Last_Executed__c</fullName>
        <description>A place to track when this trigger was last executed, to limit the number of requests made in a specified timeframe</description>
        <inlineHelpText>A place to track when this trigger was last executed, to limit the number of requests made in a specified timeframe</inlineHelpText>
        <label>Last Executed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hoopla__Run_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this Hoopla Scoreboard trigger to run on all DML operations (create, update, delete).</description>
        <inlineHelpText>Check this box if you want this Hoopla Scoreboard trigger to run on all DML operations (create, update, delete).</inlineHelpText>
        <label>Run Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hoopla__Trigger_Name__c</fullName>
        <description>Full name of the Trigger to be activated/deactivated.</description>
        <externalId>true</externalId>
        <inlineHelpText>Full name of the Trigger to be activated/deactivated.</inlineHelpText>
        <label>Trigger Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Hoopla Trigger Settings</label>
</CustomObject>